--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
+++ b/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
@@ -44,13 +44,16 @@
 
 # 2. 如何利用QEMU学习
 
-首先确保系统里安装了qemu，步骤略。大概有两种形式使用QEMU
+首先确保系统里安装了qemu，步骤略。
+
+大概有两种形式使用QEMU.
 
 ## 编译
 
 随便举个例子，来自kvm-unit-test:
 
 ```
+[root@lihaiwei kvm-unit-tests]# make
 gcc -m64 -g -Wall -fno-pic -no-pie -std=gnu99 -ffreestanding \
 	-I /home/works/kvm-unit-tests/lib -I /home/works/kvm-unit-tests/lib/x86 -I ./lib \
 	-c -o x86/tsc.o x86/tsc.c
