--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
+++ b/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
@@ -92,7 +92,11 @@ int main(void)
 qemu-system-x86_64 -vnc none -serial stdio -machine accel=kvm -kernel x86/tsc.flat
 ```
 
-这样运行的虚拟机，看上去并不真的像是一个“虚拟机”，因为没有窗口，仅仅是console端文字输出。但这样足够我们验证和尝试CPU 指令，而且非常的轻量。个人比较喜欢这样的运行方式。
+这样运行的虚拟机，看上去并不真的像是一个“虚拟机”，因为没有窗口，仅仅是console端文字输出。但这样足够我们**验证和尝试CPU 指令**，而且非常的轻量。个人比较喜欢这样的运行方式。
+
+详细参见kvm-unit-tests官网: https://www.linux-kvm.org/page/KVM-unit-tests
+
+
 
 
 
