--- a/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
+++ b/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
@@ -10,6 +10,7 @@
 - [2. 如何利用QEMU学习](#2-如何利用qemu学习)
   - [编译](#编译)
   - [在虚拟机中作为内核直接运行(-kernel)](#在虚拟机中作为内核直接运行-kernel)
+  - [制作一个镜像文件，并且使用QEMU启动](#制作一个镜像文件并且使用qemu启动)
 - [3. 参考](#3-参考)
 
 <!-- /code_chunk_output -->
@@ -84,7 +85,7 @@ int main(void)
 }
 ```
 
-这样得到一个测试两次rdtsc指令执行的时间差的测试tsc.flat。当然上面辣么麻烦的编译啊、链接啊都是为了得到最终的测试的binary，或者叫可执行文件？！我们后面有很多种方法以及机会得到这样的测试代码，如果读者一时没有成功，不要终止于此，不要气馁。
+这样得到一个测试**两次rdtsc指令**执行的**时间差**的测试tsc.flat。当然上面辣么麻烦的编译啊、链接啊都是为了得到最终的测试的binary，或者叫可执行文件？！我们后面有很多种方法以及机会得到这样的测试代码，如果读者一时没有成功，不要终止于此，不要气馁。
 
 ## 在虚拟机中作为内核直接运行(-kernel)
 
@@ -95,6 +96,131 @@ qemu-system-x86_64 -vnc none -serial stdio -machine accel=kvm -kernel x86/tsc.fl
 这样运行的虚拟机，看上去并不真的像是一个“虚拟机”，因为没有窗口，仅仅是console端文字输出。但这样足够我们**验证和尝试CPU 指令**，而且非常的轻量。个人比较喜欢这样的运行方式。
 
 详细参见kvm-unit-tests官网: https://www.linux-kvm.org/page/KVM-unit-tests
+
+## 制作一个镜像文件，并且使用QEMU启动
+
+我们可以**手动制作一个镜像**，步骤如下。但**最后一步安装grub**的时候，需要的条件有点苛刻，需要本地装有较新版本的grub-x86_64-efi。
+
+如果本地没有环境的同学，可以直接跳过制作镜像，直接下载文末的制作好的镜像文件raw.img。
+
+```
+$  dd if=/dev/zero of=raw.img bs=512 count=1048576
+1048576+0 records in
+1048576+0 records out
+536870912 bytes (537 MB, 512 MiB) copied, 1.22641 s, 438 MB/s
+
+$ losetup /dev/loop0 raw.img
+$ fdisk /dev/loop0
+Welcome to fdisk (util-linux 2.27.1).
+Changes will remain in memory only, until you decide to write them.
+Be careful before using the write command.
+Device does not contain a recognized partition table.
+Created a new DOS disklabel with disk identifier 0xe68d8ac0.
+
+Command (m for help): g
+Created a new GPT disklabel (GUID: 93A91033-E421-48DD-88E9-662C17E83136).
+
+Command (m for help): n
+Partition number (1-128, default 1):
+First sector (2048-999966, default 2048):
+Last sector, +sectors or +size{K,M,G,T,P} (2048-999966, default 999966):
+Created a new partition 1 of type 'Linux filesystem' and of size 487.3 MiB.
+
+Command (m for help): t
+Selected partition 1
+Hex code (type L to list all codes): 1
+Changed type of partition 'Linux filesystem' to 'EFI System'.
+ 
+ 
+Command (m for help): w
+  
+#then to ensure the disk status
+$ sudo fdisk -l /dev/loop0
+
+
+#注意：
+#1.the disk type must be gpt
+#2.disk identifier should have sha id
+#3.the type must be EFI System
+Disklabel type: gpt
+Disk identifier: 93A91033-E421-48DD-88E9-662C17E83136
+Device       Start    End Sectors   Size Type
+/dev/loop0p1  2048 999966  997919 487.3M EFI System
+ 
+$ partprobe /dev/loop0
+$ lsblk
+loop0                   7:0    0 488.3M  0 loop
+└─loop0p1             259:4    0 487.3M  0 loop
+ 
+$ sudo mkfs.vfat -F 32 /dev/loop0p1
+mkfs.fat 3.0.28 (2015-05-16)
+$ mkdir /virtfs
+$ mount -o rw,umask=000 /dev/loop0p1 /virtfs
+$ grub-install --removable --root-directory=/virtfs --target=x86_64-efi  /dev/loop0p1
+Installing for x86_64-efi platform.
+Installation finished. No error reported.
+ 
+$ cp /boot/grub/grub.cfg /virtfs/boot/grub/grub.cfg
+```
+
+同样，这里附上UEFI/OVMF的build 方法，但同样可以直接下载文末的binary，毕竟这不是本文的主要内容。
+
+```
+$ git clone git://github.com/tianocore/edk2.git
+$ cd edk2
+# Because the latest version is missing a file, switch to an older version
+$ git checkout 984ba6a467
+$ cd edk2
+$ make -C BaseTools
+$ . edksetup.sh
+
+
+$ vi Conf/target.txt
+#Find
+# ACTIVE_PLATFORM       = Nt32Pkg/Nt32Pkg.dsc
+# and replace it with
+# ACTIVE_PLATFORM       = OvmfPkg/OvmfPkgX64.dsc
+# Find
+#  TOOL_CHAIN_TAG        = MYTOOLS
+# and replace it with your version on GCC here for example GCC 4.6 will be used.
+# TOOL_CHAIN_TAG        = GCC5  //this is your gcc version
+# Find
+# TARGET_ARCH           = IA32
+# and replace it with 'X64' for 64bit or 'IA32 X64' to build both architectures.
+# TARGET_ARCH           = X64
+#mode detail:https://wiki.ubuntu.com/UEFI/EDK2
+$ build
+$ find -name "OVMF.fd"
+#./Build/OvmfX64/DEBUG_GCC5/FV/OVMF.fd
+$ vim ~/.bashrc
+# add this to bashrc "export OVMF_PATH=/home/huihuang/git/edk2/Build/OvmfX64/DEBUG_GCC5/FV/OVMF.fd"
+$ source ~/.bashrc
+```
+
+```
+#!/bin/bash
+        mkdir -p virt_fs
+        sudo losetup /dev/loop7 raw.img
+        partprobe /dev/loop7
+        sudo cp x86/tsc.elf virt_fs/tsx.elf
+#        sudo umount $(virt_fs_path)
+```
+
+上面这个脚本是将之前生成的tsx.flat文件copy到预先准备好的镜像里面。同时，需要确保镜像中的grub.cfg文件中有正确的entry：
+
+```
+menuentry 'acrn_unit_test' {
+                recordfail
+                load_video
+                insmod gzio
+                if [ x$grub_platform = xxen ]; then insmod xzio; insmod lzopio; fi
+                insmod part_gpt
+                insmod ext2
+                set root='hd0,gpt0'
+                search --no-floppy --fs-uuid --set=root --hint-bios=hd0,gpt0 --hint-efi=hd0,gpt0 --hint-baremetal=ahci0,gpt4  A807-B387
+                multiboot /tsx.elf
+}
+```
 
 
 
