--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
+++ b/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
@@ -11,6 +11,7 @@
   - [编译](#编译)
   - [在虚拟机中作为内核直接运行(-kernel)](#在虚拟机中作为内核直接运行-kernel)
   - [制作一个镜像文件，并且使用QEMU启动](#制作一个镜像文件并且使用qemu启动)
+- [调试虚拟机代码](#调试虚拟机代码)
 - [3. 参考](#3-参考)
 
 <!-- /code_chunk_output -->
@@ -222,10 +223,22 @@ menuentry 'acrn_unit_test' {
 }
 ```
 
+要启动这个镜像需要使用OVMF（EDK2项目中的软件模拟的UEFI）。下面是QEMU的启动参数
 
+```
+       DISPLAY=:0 qemu-system-x86_64 --bios OVMF_CODE.fd \
+-drive file=raw.img,index=0,media=disk,format=raw \
+-serial mon:stdio -m 1024M -smp cpus=4 \
+-cpu  Nehalem,+sse,+avx,+xsave,+sse2,+sse3,+mpx,+fpu,level=13 #-vnc :0
+```
 
+这里所需的所有文件都放在文末以备下载。
 
+这样启动的虚拟机，就有种仪式感了，QEMU会创建一个窗口，同时因为有UEFI/OVMF，所以可以看到一个虚拟的BIOS画面，然后还有GRUB的选择菜单，选择刚刚创建的tsx.elf的入口。
 
+# 调试虚拟机代码
+
+参考: http://ysun.coding.me/2018/12/24/qemu-debug/
 
 # 3. 参考
 
