--- a/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
+++ b/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
@@ -8,7 +8,7 @@
   - [1.2. IA32e指令](#12-ia32e指令)
   - [1.3. Linux内核/模块](#13-linux内核模块)
 - [2. 如何利用QEMU学习](#2-如何利用qemu学习)
-  - [编译](#编译)
+  - [编译生成内核文件](#编译生成内核文件)
   - [在虚拟机中作为内核直接运行(-kernel)](#在虚拟机中作为内核直接运行-kernel)
   - [制作一个镜像文件，并且使用QEMU启动](#制作一个镜像文件并且使用qemu启动)
 - [调试虚拟机代码](#调试虚拟机代码)
@@ -50,12 +50,20 @@
 
 大概有两种形式使用QEMU.
 
-## 编译
+## 编译生成内核文件
 
 随便举个例子，来自kvm-unit-test:
 
 ```
 [root@lihaiwei kvm-unit-tests]# make
+gcc  -mno-red-zone -mno-sse -mno-sse2 -m64 -O1 -g -MMD -MF x86/.new-ut.d -Wall -Wwrite-strings -Wempty-body -Wuninitialized -Wignored-qualifiers -Werror  -fno-omit-frame-pointer    -Wno-frame-address   -fno-pic    -Wclobbered  -Wunused-but-set-parameter  -Wmissing-parameter-type  -Wold-style-declaration -Woverride-init -Wmissing-prototypes -Wstrict-prototypes -std=gnu99 -ffreestanding -I /root/kvm-unit-tests/lib -I /root/kvm-unit-tests/lib/x86 -I lib   -c -o x86/new-ut.o x86/new-ut.c
+gcc  -mno-red-zone -mno-sse -mno-sse2 -m64 -O1 -g -MMD -MF x86/.new-ut.d -Wall -Wwrite-strings -Wempty-body -Wuninitialized -Wignored-qualifiers -Werror  -fno-omit-frame-pointer    -Wno-frame-address   -fno-pic    -Wclobbered  -Wunused-but-set-parameter  -Wmissing-parameter-type  -Wold-style-declaration -Woverride-init -Wmissing-prototypes -Wstrict-prototypes -nostdlib -o x86/new-ut.elf -Wl,-T,/root/kvm-unit-tests/x86/flat.lds \
+	x86/new-ut.o x86/cstart64.o lib/libcflat.a /usr/lib/gcc/x86_64-redhat-linux/4.8.5/libgcc.a
+objcopy -O elf32-i386 x86/new-ut.elf x86/new-ut.flat
+```
+
+```
+# make
 gcc -m64 -g -Wall -fno-pic -no-pie -std=gnu99 -ffreestanding \
 	-I /home/works/kvm-unit-tests/lib -I /home/works/kvm-unit-tests/lib/x86 -I ./lib \
 	-c -o x86/tsc.o x86/tsc.c
