--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
@@ -1,3 +1,5 @@
 
 # 记大量的笔记(记录所有的事情)
 
+在调查性能问题时，你可以做的最重要的事情大概就是记录下看到的每一个输出、执行的每一条命令，以及研究的每一个信息。结构清晰的记录能让你只查看记录就可以检验关于性能问题原因的猜想，而不是重新运行测试。这能节约大量时间。写下来并且创建性能记录。
+
