--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
@@ -7,7 +7,7 @@
   - [硬件/软件配置信息](#硬件软件配置信息)
   - [保存并组织性能结果](#保存并组织性能结果)
   - [记录命令行调用](#记录命令行调用)
-  - [](#)
+  - [记录研究的信息和相关URL](#记录研究的信息和相关url)
 
 <!-- /code_chunk_output -->
 
@@ -43,9 +43,14 @@
 
 Linux命令`script`是个好方法.
 
-## 
+## 记录研究的信息和相关URL
 
-* 记录研究信息和URL
+* 记录研究的信息和URL
 
-调查性能问题时，将在互联网上发现的相关信息记录下来是很重要的，不论发现的途径是电子邮件，还是人际交往。如果你找到一个看上去相关的网站，就把它剪切粘贴到你的笔记中。（网站是会消失的。）当然，还要记录下URL，因为你可能在之后还要查看这个网页，或者网页所指信息对后面的调查会变得重要起来。在收集和记录所有这些信息时，你可能会疑惑：这样做值得吗？有些信息眼下显得毫无作用或有误导性，但它在将来可能是有用的。（好的性能调查就像一部优秀的侦探剧：尽管开始的时候所有的线索都令人迷惑，但最终都会真相大白。）在调查问题时，请牢记以下几点：
+**调查性能问题**时，将研究信息记录下来, 无论是网上发现的、电子邮件询问、还是。如果你找到一个看上去相关的网站，就把它剪切粘贴到你的笔记中。（网站是会消失的。）
+
+当然，还要记录下URL，因为你可能在之后还要查看这个网页，或者网页所指信息对后面的调查会变得重要起来。
+
+
+在收集和记录所有这些信息时，你可能会疑惑：这样做值得吗？有些信息眼下显得毫无作用或有误导性，但它在将来可能是有用的。（好的性能调查就像一部优秀的侦探剧：尽管开始的时候所有的线索都令人迷惑，但最终都会真相大白。）在调查问题时，请牢记以下几点：
 
