--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
@@ -67,9 +67,11 @@ Linux命令`script`是个好方法.
 
 通过记录和整理调查过程中你所见的一切，就有足够证据支持特定理论，同时也具备大量的测试结果来证明或驳斥其他理论。
 
-* 定期回顾你的笔记可以得到新的想法——当你为性能问题积攒了大量的信息时，那就定期回顾它们。重新审视会让你关注结果，而不是测试。当许多测试结果放在一起被同时查看时，问题的原因也许就会自动浮现。回顾你收集的数据，就可以在不实际运行任何测试的情况下进行理论检验。
+* 定期回顾你的笔记可以得到新的想法
 
-在调查问题时，重做一些工作虽然是不可避免的，但是，在重做工作上花费的时间越少，你的效率就越高。如果你写了大量的笔记，并有办法在发现信息时记录它们，那么你就可以依赖已经做过的工作，而避免重复运行测试以及重复研究。保持笔记的可靠性和一致性，从而节省时间减少挫折。
+重新审视会让你关注结果，而不是测试。当许多测试结果放在一起被同时查看时，问题的原因也许就会自动浮现。回顾你收集的数据，就可以在不实际运行任何测试的情况下进行理论检验。
+
+可以避免重复运行测试以及重复研究。
 
 例如，在调查性能问题后，最终确定为硬件原因（主存慢、CPU慢等），你可能会想通过升级慢速硬件，并重新运行测试来检验这个想法。通常要花一点时间才能获得新硬件，而在你可以重新运行测试之前可能已经过了很久。当最终可以开始的时候，你想要在新老硬件上运行同样的测试。如果你已经保存了之前的测试调用和测试结果，那么，你马上就知道要怎样为新硬件进行测试设置，同时也可以比较新的结果与保存的旧结果。
 
