--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
@@ -6,10 +6,13 @@
 - [记大量的笔记(记录所有的事情)](#记大量的笔记记录所有的事情)
   - [收集和记录的信息](#收集和记录的信息)
     - [硬件/软件配置信息](#硬件软件配置信息)
-    - [保存并组织性能结果](#保存并组织性能结果)
-  - [记录命令行调用](#记录命令行调用)
-  - [记录研究的所有信息和相关URL](#记录研究的所有信息和相关url)
-  - [记录信息的必要性](#记录信息的必要性)
+    - [保存并组织性能测试结果](#保存并组织性能测试结果)
+    - [记录命令行调用](#记录命令行调用)
+    - [记录研究的所有信息和相关URL](#记录研究的所有信息和相关url)
+  - [收集和记录信息的必要性](#收集和记录信息的必要性)
+    - [结果含义的不明确致使需要反复审视](#结果含义的不明确致使需要反复审视)
+    - [所有信息都是有用的](#所有信息都是有用的)
+    - [](#)
 
 <!-- /code_chunk_output -->
 
@@ -33,13 +36,13 @@
 
 示例: **每次测试时(不仅仅是最开始**), 保存`lspci -vvvb`、`dmesg`和`uname -a`的输出。
 
-### 保存并组织性能结果
+### 保存并组织性能测试结果
 
-* 保存并组织性能结果
+* 保存并组织性能测试结果
 
 记录系统配置的同时，也记录**测试结果**。这使你得以比较**不同的配置**是**如何影响性能结果**的。
 
-## 记录命令行调用
+### 记录命令行调用
 
 * 写下命令行调用
 
@@ -47,7 +50,7 @@
 
 Linux命令`script`是个好方法.
 
-## 记录研究的所有信息和相关URL
+### 记录研究的所有信息和相关URL
 
 * 记录研究的信息和URL
 
@@ -55,7 +58,7 @@ Linux命令`script`是个好方法.
 
 当然，还要记录下**URL**。
 
-## 记录信息的必要性
+## 收集和记录信息的必要性
 
 上面让收集和记录的信息是很有必要的, 有些信息眼下显得毫无作用或有误导性，但它在将来可能是有用的。
 
@@ -63,13 +66,19 @@ Linux命令`script`是个好方法.
 
 在调查问题时，请牢记以下几点：
 
+### 结果含义的不明确致使需要反复审视
+
 * 结果的含义可能是不明确的
 
 性能工具给你的信息并不总是清晰明了的。往往需要反复审视记录的信息。
 
+### 所有信息都是有用的
+
 * 所有的信息都是有用的（这也就是你要记录的原因）
 
 通过记录和整理调查过程中你所见的一切，就有足够证据支持特定理论，同时也具备大量的测试结果来证明或驳斥其他理论。
+
+### 
 
 * 定期回顾你的笔记可以得到新的想法
 
