--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
@@ -3,30 +3,32 @@
 
 <!-- code_chunk_output -->
 
-- [记大量的笔记(记录所有的事情)](#记大量的笔记记录所有的事情)
-  - [收集和记录的信息](#收集和记录的信息)
-    - [硬件/软件配置信息](#硬件软件配置信息)
-    - [保存并组织性能测试结果](#保存并组织性能测试结果)
-    - [记录命令行调用](#记录命令行调用)
-    - [记录研究的所有信息和相关URL](#记录研究的所有信息和相关url)
-  - [收集和记录信息的必要性](#收集和记录信息的必要性)
-    - [结果含义的不明确致使需要反复审视](#结果含义的不明确致使需要反复审视)
-    - [所有信息都是有用的](#所有信息都是有用的)
-    - [](#)
+- [1. 记大量的笔记(记录所有的事情)](#1-记大量的笔记记录所有的事情)
+  - [1.1. 收集和记录的信息](#11-收集和记录的信息)
+    - [1.1.1. 硬件/软件配置信息](#111-硬件软件配置信息)
+    - [1.1.2. 保存并组织性能测试结果](#112-保存并组织性能测试结果)
+    - [1.1.3. 记录命令行调用](#113-记录命令行调用)
+    - [1.1.4. 记录研究的所有信息和相关URL](#114-记录研究的所有信息和相关url)
+  - [1.2. 收集和记录信息的必要性](#12-收集和记录信息的必要性)
+    - [1.2.1. 结果含义的不明确致使需要反复审视](#121-结果含义的不明确致使需要反复审视)
+    - [1.2.2. 所有信息都是有用的](#122-所有信息都是有用的)
+    - [1.2.3. 回顾可以得到新想法](#123-回顾可以得到新想法)
+    - [1.2.4. 保持过程的可靠性和一致性](#124-保持过程的可靠性和一致性)
+- [自动执行重复任务](#自动执行重复任务)
 
 <!-- /code_chunk_output -->
 
-# 记大量的笔记(记录所有的事情)
+# 1. 记大量的笔记(记录所有的事情)
 
 调查性能问题，**最重要**的事情是记录下看到的**每一个输出**、执行的**每一条命令**，以及研究的**每一个信息**。
 
 性能调查之前, 我通常**创建一个目录**，打开一个**新文件**，开始记录**系统的信息**。之后，将**性能结果**保存到**这个目录**，并将**相关的信息**保存到**这个文件**。
 
-## 收集和记录的信息
+## 1.1. 收集和记录的信息
 
 建议将下面的内容添加到你的性能调查**文件**和**目录**中：
 
-### 硬件/软件配置信息
+### 1.1.1. 硬件/软件配置信息
 
 * 记录**硬/软件**的**配置情况** 
 
@@ -36,13 +38,13 @@
 
 示例: **每次测试时(不仅仅是最开始**), 保存`lspci -vvvb`、`dmesg`和`uname -a`的输出。
 
-### 保存并组织性能测试结果
+### 1.1.2. 保存并组织性能测试结果
 
 * 保存并组织性能测试结果
 
 记录系统配置的同时，也记录**测试结果**。这使你得以比较**不同的配置**是**如何影响性能结果**的。
 
-### 记录命令行调用
+### 1.1.3. 记录命令行调用
 
 * 写下命令行调用
 
@@ -50,7 +52,7 @@
 
 Linux命令`script`是个好方法.
 
-### 记录研究的所有信息和相关URL
+### 1.1.4. 记录研究的所有信息和相关URL
 
 * 记录研究的信息和URL
 
@@ -58,7 +60,7 @@ Linux命令`script`是个好方法.
 
 当然，还要记录下**URL**。
 
-## 收集和记录信息的必要性
+## 1.2. 收集和记录信息的必要性
 
 上面让收集和记录的信息是很有必要的, 有些信息眼下显得毫无作用或有误导性，但它在将来可能是有用的。
 
@@ -66,24 +68,29 @@ Linux命令`script`是个好方法.
 
 在调查问题时，请牢记以下几点：
 
-### 结果含义的不明确致使需要反复审视
+### 1.2.1. 结果含义的不明确致使需要反复审视
 
 * 结果的含义可能是不明确的
 
 性能工具给你的信息并不总是清晰明了的。往往需要反复审视记录的信息。
 
-### 所有信息都是有用的
+### 1.2.2. 所有信息都是有用的
 
 * 所有的信息都是有用的（这也就是你要记录的原因）
 
-通过记录和整理调查过程中你所见的一切，就有足够证据支持特定理论，同时也具备大量的测试结果来证明或驳斥其他理论。
+通过记录和整理调查过程中你所见的一切，就有足够证据**支持特定理论**，同时也具备大量的测试结果来证明或驳斥其他理论。
 
-### 
+### 1.2.3. 回顾可以得到新想法
 
 * 定期回顾你的笔记可以得到新的想法
 
 重新审视会让你关注结果，而不是测试。当许多测试结果放在一起被同时查看时，问题的原因也许就会自动浮现。回顾你收集的数据，就可以在不实际运行任何测试的情况下进行理论检验。
 
-可以避免重复运行测试以及重复研究。
+### 1.2.4. 保持过程的可靠性和一致性
 
-例如，发现是硬件问题, 就能根据之前的配置和测试过程为新硬件进行测试设置以及运行测试，同时也可以比较新的结果与保存的旧结果。因为可能过了很长时间. 
+可以**避免重复运行测试**以及**重复研究**。保持过程的可靠性和一致性.
+
+例如，发现是硬件问题, 就能根据**之前的配置和测试过程**为**新硬件**进行**测试设置以及运行测试**，同时也可以比较新的结果与保存的旧结果。因为可能过了很长时间. 
+
+# 自动执行重复任务
+
