--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
@@ -14,8 +14,11 @@
     - [1.2.2. 所有信息都是有用的](#122-所有信息都是有用的)
     - [1.2.3. 回顾可以得到新想法](#123-回顾可以得到新想法)
     - [1.2.4. 保持过程的可靠性和一致性](#124-保持过程的可靠性和一致性)
-- [自动执行重复任务](#自动执行重复任务)
-- [尽可能选择低开销工具](#尽可能选择低开销工具)
+- [2. 自动执行重复任务](#2-自动执行重复任务)
+  - [2.1. 性能工具调用](#21-性能工具调用)
+  - [2.2. 应用程序测试](#22-应用程序测试)
+  - [2.3. 举例](#23-举例)
+- [3. 尽可能选择低开销工具](#3-尽可能选择低开销工具)
 
 <!-- /code_chunk_output -->
 
@@ -93,23 +96,35 @@ Linux命令`script`是个好方法.
 
 例如，发现是硬件问题, 就能根据**之前的配置和测试过程**为**新硬件**进行**测试设置以及运行测试**，同时也可以比较新的结果与保存的旧结果。因为可能过了很长时间. 
 
-# 自动执行重复任务
+# 2. 自动执行重复任务
 
 输入复杂命令容易出错, 有些不正确参数和配置容易导致误导性信息. 
 
 因此，自动执行**性能工具调用！！！** 和**应用程序测试！！！** 是一个好办法：·
 
+## 2.1. 性能工具调用
+
 * 性能工具调用
 
 有些Linux**性能工具的命令行**相当复杂，把它们保存到一个**shell脚本**中，或是**将所有命令保存到文件**中。
+
+## 2.2. 应用程序测试
 
 * 应用程序测试
 
 **大部分应用程序**有着**复杂的配置**，要么通过**命令行**，要么通过**配置文件**。将测试调用保存为**脚本**。
 
-尽可能多地自动执行，就能减少错误。使用脚本自动执行，可以节省时间，并有助于避免因不当工具和测试调用造成的误导性信息。
+## 2.3. 举例
 
-举个例子，你想在特定工作负载下或某段时间内监控系统，但是在测试结束时，你可能不在现场。这种情况下，脚本就很好用了，在测试完成时，可以自动收集、命名、保存全部生成的性能数据，并将它们自动放到“Results”目录中。有了这些基础之后，你就能按照不同的优化和调整重新运行测试，并且不用担心数据是否已经保存好。你反而可以集中精力找出问题的原因，而不是去管理测试结果。
+**尽可能**多地**自动执行**，就能**减少错误**。使用**脚本自动执行**，可以**节省时间**。
 
-# 尽可能选择低开销工具
+举个例子，你想在**特定工作负载**下或**某段时间**内**监控系统**，但是在**测试结束时**，你**可能不在现场**。
+
+这种情况下，脚本就很好用了，在**测试完成时**，可以**自动收集**、**命名**、**保存**全部生成的**性能数据**，并将它们自动放到“Results”目录中。
+
+有了这些基础之后，你就能按照**不同的优化和调整重新运行测试**，并且不用担心数据**是否已经保存好**。
+
+# 3. 尽可能选择低开销工具
+
+一般情况下，**观察系统**会**修改系统的行为**。（对物理爱好者来说，这就是**海森堡（Heisenberg）不确定性原理**）
 
