--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
@@ -133,7 +133,11 @@ Linux命令`script`是个好方法.
 
 # 使用多个工具来搞清楚问题
 
-虽然在找出性能问题原因的时候，如果只需要用一个工具那将是非常方便的，但这种情况相当少见。实际上，你使用的每一种工具都会为问题的原因提供线索，因此，你必须同时使用多个工具来真正搞清楚发生了什么。比如，一种性能工具会告诉你系统存在大量的磁盘I/O，而另一种工具则告诉你系统使用了大量的交换。如果只以第一个工具的结论制定解决方案，你可能会简单地选择更快的磁盘驱动器（然后发现性能问题仅仅改善了一点点）。而将两种工具的结果放在一起，你就会判断出：大量的磁盘I/O是由大量使用的交换造成的。在这种情况下，你可能会买更多的主存以减少交换（这样就不会再有大量的磁盘I/O）。
+比如，**一种性能工具**会告诉你系统存在**大量的磁盘I/O**，而另一种工具则告诉你系统**使用了大量的交换**。
+
+如果**只以第一个工具**的结论制定解决方案，你可能会简单地**选择更快的磁盘驱动器**（然后发现性能问题仅仅改善了一点点）。
+
+而将两种工具的结果放在一起，你就会判断出：大量的磁盘I/O是由大量使用的交换造成的。在这种情况下，你可能会买更多的主存以减少交换（这样就不会再有大量的磁盘I/O）。
 
 比起单一地使用任何一种工具，同时使用多个性能工具通常能让你对性能问题有更清晰的了解。
 
