--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/1. 常用建议.md
@@ -19,7 +19,9 @@
   - [2.2. 应用程序测试](#22-应用程序测试)
   - [2.3. 举例](#23-举例)
 - [3. 尽可能选择低开销工具](#3-尽可能选择低开销工具)
-- [使用多个工具来搞清楚问题](#使用多个工具来搞清楚问题)
+- [4. 使用多个工具来搞清楚问题](#4-使用多个工具来搞清楚问题)
+- [5. 相信你的工具](#5-相信你的工具)
+- [6. 利用其他人的经验(慎重)](#6-利用其他人的经验慎重)
 
 <!-- /code_chunk_output -->
 
@@ -131,7 +133,7 @@ Linux命令`script`是个好方法.
 
 具体而言，在使用性能工具时，它们会改变系统的行为方式。
 
-# 使用多个工具来搞清楚问题
+# 4. 使用多个工具来搞清楚问题
 
 比如，**一种性能工具**会告诉你系统存在**大量的磁盘I/O**，而另一种工具则告诉你系统**使用了大量的交换**。
 
@@ -142,4 +144,8 @@ Linux命令`script`是个好方法.
 比起单一地使用任何一种工具，**同时使用多个性能工具**通常能让你对性能问题有更清晰的了解。
 
 寓言: 盲人摸象
+
+# 5. 相信你的工具
+
+# 6. 利用其他人的经验(慎重)
 
