--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
@@ -1,30 +1,35 @@
 
-<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
-
-<!-- code_chunk_output -->
-
-- [找到指标、基线和目标](#找到指标-基线和目标)
-
-<!-- /code_chunk_output -->
-
 本节列出了开始性能调查时的几个重要步骤。
 
 由于终极目标是解决问题，因此最好的方法是在你接触性能工具之前就开始研究问题。遵循如下特定步骤是解决问题的有效方法，并且不会浪费宝贵的时间。
 
 # 找到指标、基线和目标
 
-性能调查的第一步就是确定当前的性能，并明确其应提升的程度。如果你的系统明显性能不佳，你就可以确定值得花时间进行研究。但是，如果系统性能接近其峰值，那么就不值得研究。明确性能峰值有助于你设置合理的性能期望值，并能给你一个性能目标，这样你就知道何时应该停止优化。你可能总是没有目标地时不时对系统做一点调整，这会浪费大量的时间，只为得到一些额外的性能，即使你可能并不真的需要它们。
+性能调查的第一步就是确定**当前的性能**，并明确其**应提升的程度**。
 
-1.2.1.1 确定指标
-要想知道什么时候结束优化，你必须为系统自行确立或是使用已发布的指标。指标是一种客观的度量，用于指示系统的执行情况。例如，如果你要优化一个Web服务器，你就可以选择“每秒服务的Web请求数”。如果你没有一个客观的途径来度量性能，那么在调整系统的时候，你几乎无法确定是否取得了进展。
-1.2.1.2 确定基线
+明确性能峰值有助于你设置合理的性能期望值，并能给你一个性能目标，这样你就知道何时应该停止优化。
+
+## 确定指标
+
+要想知道什么时候结束优化，你必须为系统自行确立或是使用已发布的指标。指标是一种客观的度量，用于指示系统的执行情况。
+
+例如，如果你要优化一个Web服务器，你就可以选择“**每秒服务的Web请求数**”。
+
+## 确定基线
+
 在你明确了如何度量特定系统或应用程序的性能之后，确定当前的性能等级就很重要了。在调整和优化之前，运行应用程序并记录其性能，这就是基线值，它是性能调查的起点。
-1.2.1.3 确定目标
+
+## 确定目标
+
 在你确定了性能指标和基线后，现在需要确定一个目标，这个目标引导你完成性能追踪。你可以无限期地调整系统，花费越来越多的时间来获得更加好一点的性能。如果你制定了目标，那么你就会知道什么时候该结束整个过程。要选择合理的目标，下面是一些好的起点：
 ❑寻找其他有相同配置的人，询问他们的性能指标——这是理想状态。如果你能发现某人拥有相似的系统和更好的性能，则不仅能为你的系统选定目标，还能与这个人一起工作：他可以确定为什么你的配置更慢，以及该配置有何不同。在研究问题时，使用另一个系统作为参照被证明是非常有用的。
+
 ❑查找工业标准测试程序的结果——许多网站都比较了计算机系统各方面的基准测试结果。有些基准测试结果是经过异常的努力得到的，因此，它们可能不能代表真实的使用情况。不过，很多基准测试网站给出了特定结果使用的配置，这些配置信息可以为你调整系统提供线索。
+
 ❑在不同的OS或应用程序上使用你的硬件——可能要在你的系统上运行不同的软件以实现相似的功能。比如，如果你有两个不同的Web服务器，其中一个运行较慢，那么就试试另一个，看它的性能是否好一些。或者，在另一个不同的操作系统上运行同一个应用程序。如果上述任一情况下系统执行表现得更好一些，那么，你就会知道原来的应用程序还有改进的空间。
+
 如果用现有的性能信息来指导你的目标，那么你有更好的机会来选择一个积极的，但也并非不可能达到的目标。
+
 抓住低处的果实
 性能追踪的另一种方法是选择在特定时间段内进行追踪，而不是选择一个目标，在这段时间内尽可能地对性能进行优化。如果应用程序从未被优化过，那么通常在给定工作负载下，会有一些问题相对容易解决。这些容易被修复的问题称为“低处的果实”。
 为什么是“低处的果实”？打个比方，将性能调查想象成你饿了，正站在一棵苹果树下。你会采摘最靠近地面，也是你最容易够到的苹果。这些低处的苹果与果树稍高处较难够到的苹果一样能够填饱你的肚子，但是采摘它们只需花费很少的力气。相似的，如果你要在有限的时间内优化一个应用程序，你可能会试着修复那些最简单明显的问题（低处的果实），而不是做一些更困难的、根本性的变化。
