--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
@@ -11,29 +11,44 @@
 
 ## 确定指标
 
-要想知道什么时候结束优化，你必须为系统自行确立或是使用已发布的指标。指标是一种客观的度量，用于指示系统的执行情况。
+要想知道**什么时候结束优化**，必须**为系统确立**或是**使用已发布的指标**。
+
+指标是一种**客观的度量**，用于**指示系统的执行情况**。
 
 例如，如果你要优化一个Web服务器，你就可以选择“**每秒服务的Web请求数**”。
 
 ## 确定基线
 
-在你明确了如何度量特定系统或应用程序的性能之后，确定当前的性能等级就很重要了。在调整和优化之前，运行应用程序并记录其性能，这就是基线值，它是性能调查的起点。
+确定**当前的性能等级**就很重要。
+
+在**调整和优化之前**，运行**应用程序**并记录其**性能**，这就是**基线值**，它是性能调查的起点。
 
 ## 确定目标
 
 在你确定了性能指标和基线后，现在需要确定一个目标，这个目标引导你完成性能追踪。你可以无限期地调整系统，花费越来越多的时间来获得更加好一点的性能。如果你制定了目标，那么你就会知道什么时候该结束整个过程。要选择合理的目标，下面是一些好的起点：
-❑寻找其他有相同配置的人，询问他们的性能指标——这是理想状态。如果你能发现某人拥有相似的系统和更好的性能，则不仅能为你的系统选定目标，还能与这个人一起工作：他可以确定为什么你的配置更慢，以及该配置有何不同。在研究问题时，使用另一个系统作为参照被证明是非常有用的。
 
-❑查找工业标准测试程序的结果——许多网站都比较了计算机系统各方面的基准测试结果。有些基准测试结果是经过异常的努力得到的，因此，它们可能不能代表真实的使用情况。不过，很多基准测试网站给出了特定结果使用的配置，这些配置信息可以为你调整系统提供线索。
+* 寻找其他有相同配置的人，询问他们的性能指标
 
-❑在不同的OS或应用程序上使用你的硬件——可能要在你的系统上运行不同的软件以实现相似的功能。比如，如果你有两个不同的Web服务器，其中一个运行较慢，那么就试试另一个，看它的性能是否好一些。或者，在另一个不同的操作系统上运行同一个应用程序。如果上述任一情况下系统执行表现得更好一些，那么，你就会知道原来的应用程序还有改进的空间。
+这是理想状态。如果你能发现某人拥有相似的系统和更好的性能，则不仅能为你的系统选定目标，还能与这个人一起工作：他可以确定为什么你的配置更慢，以及该配置有何不同。在研究问题时，使用另一个系统作为参照被证明是非常有用的。
+
+* 查找工业标准测试程序的结果
+
+许多网站都比较了计算机系统各方面的基准测试结果。有些基准测试结果是经过异常的努力得到的，因此，它们可能不能代表真实的使用情况。不过，很多基准测试网站给出了特定结果使用的配置，这些配置信息可以为你调整系统提供线索。
+
+* 在不同的OS或应用程序上使用你的硬件
+
+可能要在你的系统上运行不同的软件以实现相似的功能。比如，如果你有两个不同的Web服务器，其中一个运行较慢，那么就试试另一个，看它的性能是否好一些。或者，在另一个不同的操作系统上运行同一个应用程序。如果上述任一情况下系统执行表现得更好一些，那么，你就会知道原来的应用程序还有改进的空间。
 
 如果用现有的性能信息来指导你的目标，那么你有更好的机会来选择一个积极的，但也并非不可能达到的目标。
 
 抓住低处的果实
+
 性能追踪的另一种方法是选择在特定时间段内进行追踪，而不是选择一个目标，在这段时间内尽可能地对性能进行优化。如果应用程序从未被优化过，那么通常在给定工作负载下，会有一些问题相对容易解决。这些容易被修复的问题称为“低处的果实”。
+
 为什么是“低处的果实”？打个比方，将性能调查想象成你饿了，正站在一棵苹果树下。你会采摘最靠近地面，也是你最容易够到的苹果。这些低处的苹果与果树稍高处较难够到的苹果一样能够填饱你的肚子，但是采摘它们只需花费很少的力气。相似的，如果你要在有限的时间内优化一个应用程序，你可能会试着修复那些最简单明显的问题（低处的果实），而不是做一些更困难的、根本性的变化。
-1.2.2 追踪近似问题
+
+# 追踪近似问题
+
 使用性能工具为确定问题原因打开第一个口子。通过初始的粗略尝试，你能对问题形成大致的看法。这个简单切口的目的就是收集足够的信息传递给程序的其他用户和开发者，以便他们提出意见和建议。这里非常重要的一点是要有良好的书面记录来解释你认为问题是怎样的，以及什么样的测试使你得出了这个结论。
 1.2.3 查看问题是否早已解决
 你的下一个目标是确定是否有其他人已经解决了这个问题。性能调查可能是一个冗长且费时的事情，如果你正好可以利用其他人的工作，那么在你开始之前就将抢占先机。因为你的目的就是要改进系统性能，所以解决性能问题最好的办法就是依靠其他人已有的成果。
