--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
@@ -13,9 +13,9 @@
 
 要想知道**什么时候结束优化**，必须**为系统确立**或是**使用已发布的指标**。
 
-指标是一种**客观的度量**，用于**指示系统的执行情况**。
+指标是一种**客观的度量**，用于**指示系统的执行情况！！！**。
 
-例如，如果你要优化一个Web服务器，你就可以选择“**每秒服务的Web请求数**”。
+例如，如果你要优化一个Web服务器，你就可以选择“**每秒服务的Web请求数！！！**”。
 
 ## 确定基线
 
@@ -25,15 +25,23 @@
 
 ## 确定目标
 
-在你确定了性能指标和基线后，现在需要确定一个目标，这个目标引导你完成性能追踪。你可以无限期地调整系统，花费越来越多的时间来获得更加好一点的性能。如果你制定了目标，那么你就会知道什么时候该结束整个过程。要选择合理的目标，下面是一些好的起点：
+在你确定了性能指标和基线后，现在需要确定一个目标，这个目标引导你完成性能追踪。
+
+你可以无限期地调整系统，花费越来越多的时间来获得更加好一点的性能。
+
+如果你制定了目标，那么你就会知道什么时候该结束整个过程。
+
+要**选择合理的目标**，下面是一些好的起点：
 
 * 寻找其他有相同配置的人，询问他们的性能指标
 
-这是理想状态。如果你能发现某人拥有相似的系统和更好的性能，则不仅能为你的系统选定目标，还能与这个人一起工作：他可以确定为什么你的配置更慢，以及该配置有何不同。在研究问题时，使用另一个系统作为参照被证明是非常有用的。
+如果其他人有相似系统和更好性能, 可以对比配置的不同来排查自己的
 
 * 查找工业标准测试程序的结果
 
-许多网站都比较了计算机系统各方面的基准测试结果。有些基准测试结果是经过异常的努力得到的，因此，它们可能不能代表真实的使用情况。不过，很多基准测试网站给出了特定结果使用的配置，这些配置信息可以为你调整系统提供线索。
+从网上或其他途径查找基准的测试结果.
+
+很多基准测试网站给出了**特定结果使用的配置**，这些配置信息可以为你调整系统**提供线索**。
 
 * 在不同的OS或应用程序上使用你的硬件
 
