--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
@@ -27,10 +27,6 @@
 
 在你确定了性能指标和基线后，现在需要确定一个目标，这个目标引导你完成性能追踪。
 
-你可以无限期地调整系统，花费越来越多的时间来获得更加好一点的性能。
-
-如果你制定了目标，那么你就会知道什么时候该结束整个过程。
-
 要**选择合理的目标**，下面是一些好的起点：
 
 * 寻找其他有相同配置的人，询问他们的性能指标
@@ -43,17 +39,11 @@
 
 很多基准测试网站给出了**特定结果使用的配置**，这些配置信息可以为你调整系统**提供线索**。
 
-* 在不同的OS或应用程序上使用你的硬件
-
-可能要在你的系统上运行不同的软件以实现相似的功能。比如，如果你有两个不同的Web服务器，其中一个运行较慢，那么就试试另一个，看它的性能是否好一些。或者，在另一个不同的操作系统上运行同一个应用程序。如果上述任一情况下系统执行表现得更好一些，那么，你就会知道原来的应用程序还有改进的空间。
-
-如果用现有的性能信息来指导你的目标，那么你有更好的机会来选择一个积极的，但也并非不可能达到的目标。
-
-抓住低处的果实
-
-性能追踪的另一种方法是选择在特定时间段内进行追踪，而不是选择一个目标，在这段时间内尽可能地对性能进行优化。如果应用程序从未被优化过，那么通常在给定工作负载下，会有一些问题相对容易解决。这些容易被修复的问题称为“低处的果实”。
-
-为什么是“低处的果实”？打个比方，将性能调查想象成你饿了，正站在一棵苹果树下。你会采摘最靠近地面，也是你最容易够到的苹果。这些低处的苹果与果树稍高处较难够到的苹果一样能够填饱你的肚子，但是采摘它们只需花费很少的力气。相似的，如果你要在有限的时间内优化一个应用程序，你可能会试着修复那些最简单明显的问题（低处的果实），而不是做一些更困难的、根本性的变化。
+>抓住低处的果实
+>
+>性能追踪的**另一种方法**是选择在**特定时间段**内进行追踪，而**不是选择一个目标**。如果应用程序从未被优化过，那么通常在给定工作负载下，会有一些问题相对容易解决。这些容易被修复的问题称为“低处的果实”。
+>
+>为什么是“低处的果实”？打个比方，将性能调查想象成你饿了，正站在一棵苹果树下。你会采摘最靠近地面，也是你最容易够到的苹果。这些低处的苹果与果树稍高处较难够到的苹果一样能够填饱你的肚子，但是采摘它们只需花费很少的力气。相似的，如果你要在有限的时间内优化一个应用程序，你可能会试着**修复那些最简单明显的问题**（低处的果实），而不是做一些更困难的、根本性的变化。
 
 # 追踪近似问题
 
