--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
@@ -1,7 +1,9 @@
 
 本节列出了开始性能调查时的几个重要步骤。
 
-由于终极目标是解决问题，因此最好的方法是在你接触性能工具之前就开始研究问题。遵循如下特定步骤是解决问题的有效方法，并且不会浪费宝贵的时间。
+由于终极目标是解决问题，因此最好的方法是在你接触性能工具之前就开始研究问题。
+
+遵循如下特定步骤是解决问题的有效方法，并且不会浪费宝贵的时间。
 
 # 找到指标、基线和目标
 
@@ -43,34 +45,27 @@
 >
 >性能追踪的**另一种方法**是选择在**特定时间段**内进行追踪，而**不是选择一个目标**。如果你要在有限的时间内优化一个应用程序，你可能会试着**修复那些最简单明显的问题**（低处的果实），而不是做一些更困难的、根本性的变化。
 
-# 追踪近似问题
+# 追踪问题
 
-使用性能工具为确定问题原因打开第一个口子。通过初始的粗略尝试，你能对问题形成大致的看法。这个简单切口的目的就是收集足够的信息传递给程序的其他用户和开发者，以便他们提出意见和建议。这里非常重要的一点是要有良好的书面记录来解释你认为问题是怎样的，以及什么样的测试使你得出了这个结论。
+使用**性能工具**为确定问题原因打开第一个口子。通过初始的粗略尝试，你能对问题形成大致的看法。
+
+记录下过程, 也能解释为什么追踪到是这个问题.
+
+这个简单切口的目的就是收集足够的信息传递给程序的其他用户和开发者，以便他们提出意见和建议。
+
+这里非常重要的一点是要有良好的书面记录来解释你认为问题是怎样的，以及什么样的测试使你得出了这个结论。
 
 # 查看问题是否早已解决
 
-你的下一个目标是确定是否有其他人已经解决了这个问题。性能调查可能是一个冗长且费时的事情，如果你正好可以利用其他人的工作，那么在你开始之前就将抢占先机。因为你的目的就是要改进系统性能，所以解决性能问题最好的办法就是依靠其他人已有的成果。
-
-尽管你很可能对性能问题的具体建议持保留态度，但是这些建议具有启发性，可以使你了解到其他人可能已经研究过相似的问题，他们是如何试着解决问题的，以及他们是否成功了。
 下述这些地方也能寻求性能建议：
 
 * 在Web上查找相似的错误信息/问题
 
-这通常是我调查的第一步。Web搜索常常会揭示很多与应用程序以及你正在查找的具体错误情况相关的信息。它们还可以指向其他用户所尝试的系统优化，还可能提示哪些有作用、哪些没有作用。成功的搜索可以产生好几页能够直接用于你的性能问题的信息。要发现有相似性能问题的人，使用Google或Google论坛搜索是非常有用的方法。
-
 * 在应用程序邮件列表上求助
-
-大多数流行或公开开发的软件都有软件使用者的邮件列表，这是寻找性能问题答案的绝佳地方。读者和贡献者通常在软件运行以及保持其性能良好方面有经验。搜索一下邮件列表的存档，因为有人可能会问过相同的问题。而随后对原始消息的回复也许就描述了一个解决方案。如果没有这样的回复，就向最初提出这个问题的人发邮件，询问他是否找到了解决方法。如果这样也不行，或是没有其他人提出过相似的问题，那么在列表上发邮件说明你的问题，幸运的话，也许已经有人把这个问题解决了。
 
 * 向开发人员发邮件
 
-很多Linux软件在文档的某个位置包含了开发者的e-mail地址，如果在互联网和邮件列表中搜索失败，你可以尝试直接给开发者发邮件。开发人员通常非常忙，不见得有时间回复邮件。但是，相比其他人，他们更加了解软件，如果你能向开发者提供对性能问题条理清晰的分析，并愿意和他一起工作，那么开发者也许能帮助你。虽然开发者关于性能问题原因的想法不见得正确，但是他们可能会给你指出一个富有成果的方向。
-
-* 与内部开发人员交谈
-
-最后，如果产品是内部开发的，你就可以与内部开发人员通电话或发邮件。这和与外部开发者联系几乎是一样的，只不过内部人员可能会在你的问题上投入更多时间，或是给你指出内部的知识库。
-
-依靠其他人的工作，你也许在性能调查开始之前就能解决问题。至少，你有可能找到一些有希望的方法来调查，所以，最好总是看看别人有什么发现。
+* 与产品内部开发人员交谈
 
 # 项目开始（启动调查）
 
