--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
+++ b/Linux/Learning/Linux性能优化/第1章 性能追踪建议/2. 性能调查概要.md
@@ -1,17 +1,30 @@
 
-本节列出了开始性能调查时的几个重要步骤。
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-由于终极目标是解决问题，因此最好的方法是在你接触性能工具之前就开始研究问题。
+<!-- code_chunk_output -->
+
+- [1. 找到指标、基线和目标](#1-找到指标-基线和目标)
+  - [1.1. 确定指标](#11-确定指标)
+  - [1.2. 确定基线](#12-确定基线)
+  - [1.3. 确定目标](#13-确定目标)
+- [2. 追踪问题](#2-追踪问题)
+- [3. 查看问题是否早已解决](#3-查看问题是否早已解决)
+- [4. 项目开始（启动调查）](#4-项目开始启动调查)
+- [5. 记录，记录，记录](#5-记录记录记录)
+
+<!-- /code_chunk_output -->
+
+本节列出了开始性能调查时的几个重要步骤。
 
 遵循如下特定步骤是解决问题的有效方法，并且不会浪费宝贵的时间。
 
-# 找到指标、基线和目标
+# 1. 找到指标、基线和目标
 
 性能调查的第一步就是确定**当前的性能**，并明确其**应提升的程度**。
 
 明确性能峰值有助于你设置合理的性能期望值，并能给你一个性能目标，这样你就知道何时应该停止优化。
 
-## 确定指标
+## 1.1. 确定指标
 
 要想知道**什么时候结束优化**，必须**为系统确立**或是**使用已发布的指标**。
 
@@ -19,13 +32,13 @@
 
 例如，如果你要优化一个Web服务器，你就可以选择“**每秒服务的Web请求数！！！**”。
 
-## 确定基线
+## 1.2. 确定基线
 
 确定**当前的性能等级**就很重要。
 
 在**调整和优化之前**，运行**应用程序**并记录其**性能**，这就是**基线值**，它是性能调查的起点。
 
-## 确定目标
+## 1.3. 确定目标
 
 在你确定了性能指标和基线后，现在需要确定一个目标，这个目标引导你完成性能追踪。
 
@@ -45,17 +58,13 @@
 >
 >性能追踪的**另一种方法**是选择在**特定时间段**内进行追踪，而**不是选择一个目标**。如果你要在有限的时间内优化一个应用程序，你可能会试着**修复那些最简单明显的问题**（低处的果实），而不是做一些更困难的、根本性的变化。
 
-# 追踪问题
+# 2. 追踪问题
 
 使用**性能工具**为确定问题原因打开第一个口子。通过初始的粗略尝试，你能对问题形成大致的看法。
 
 记录下过程, 也能解释为什么追踪到是这个问题.
 
-这个简单切口的目的就是收集足够的信息传递给程序的其他用户和开发者，以便他们提出意见和建议。
-
-这里非常重要的一点是要有良好的书面记录来解释你认为问题是怎样的，以及什么样的测试使你得出了这个结论。
-
-# 查看问题是否早已解决
+# 3. 查看问题是否早已解决
 
 下述这些地方也能寻求性能建议：
 
@@ -67,9 +76,11 @@
 
 * 与产品内部开发人员交谈
 
-# 项目开始（启动调查）
+# 4. 项目开始（启动调查）
 
-现在你已经详细了解了别人解决问题的可能性，接下来必须开始性能调查了。后续章节将详细介绍工具和方法，但是现在还有一些提示能让你的工作效果更好：
+现在你已经详细了解了别人解决问题的可能性，接下来必须开始**性能调查**了。
+
+后续章节将详细介绍工具和方法，但是现在还有一些提示能让你的工作效果更好：
 
 * 分离问题
 
@@ -89,6 +100,6 @@
 
 遵循这些建议能帮助你避免误导，并有助于确定性能问题的原因。
 
-# 记录，记录，记录
+# 5. 记录，记录，记录
 
-如前所述，记录你所做的事情以便之后回顾和审查，这一点确实很重要。如果你已经开始追踪性能问题，那么在你的脑海中就会有大量新增的笔记和URL。它们可能杂乱无章，混成一团，但现在你明白它们的意思，知道它们的组织结构。在解决问题后，花些时间重写你的发现以及为什么你认为这么做是对的。包括测量得到的性能结果和做过的实验。虽然看上去工作量很大，但却是非常值得的。几个月后，曾经做过的测试很容易就会被忘记，如果没有将结果记录下来，最终你可能会重做测试。如果在这些测试还记忆犹新时撰写了报告，你就不用重做这些工作，而只需要依靠这些记录就行。
+如前所述，记录大量新增的笔记和URL。
