--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
@@ -1,18 +1,34 @@
 
-# 
+# 不同工具不同方式相似结果
+
 **每一种系统级Linux性能工具**都提供了**不同的方式**来提取**相似的统计结果**。
 
-虽然没有工具能显示全部的信息，但是有些工具显示的是相同的统计信息。
+虽然没有工具能显示全部的信息，但是有些工具显示的是**相同的统计信息**。
 
 为了**不多次（每种工具一次**）解释统计信息的含义，我们在描述所有工具之前对这些信息进行**一次性说明**。
 
-2.1.1 运行队列统计
-在Linux中，一个进程要么是可运行的，要么是阻塞的（正在等待一个事件的完成）。阻塞进程可能在等待的是从I/O设备来的数据，或者是系统调用的结果。如果进程是可运行的，那就意味着它要和其他也是可运行的进程竞争CPU时间。一个可运行的进程不一定会使用CPU，但是当Linux调度器决定下一个要运行的进程时，它会从可运行进程队列中挑选。如果进程是可运行的，同时又在等待使用处理器，这些进程就构成了运行队列。运行队列越长，处于等待状态的进程就越多。
-性能工具通常会给出可运行的进程个数和等待I/O的阻塞进程个数。另一种常见的系统统计是平均负载。系统的负载是指正在运行和可运行的进程总数。比如，如果正在运行的进程为两个，而可运行的进程为三个，那么系统负载就是5。平均负载是给定时间内的负载量。一般情况下，取平均负载的时间为1分钟、5分钟和15分钟。这能让你观察到负载是如何随时间变化的。
-2.1.2 上下文切换
+# 运行队列统计
+
+在Linux中，一个进程要么是**可运行的**，要么是**阻塞的**（正在**等待一个事件的完成！！！一个进程被调度出去也是可运行态！！！**）。
+
+* 阻塞进程可能在**等待**的是从**I/O设备**来的数据，或者是**系统调用的结果**。
+* 如果进程是**可运行**的，那就意味着它要和其他也是可运行的进程竞争CPU时间。
+
+一个**可运行**的进程**不一定会使用CPU！！！**，但是当Linux调度器决定下一个要运行的进程时，它会从**可运行进程队列**中挑选。
+
+如果**进程**是**可运行**的，同时又在**等待使用处理器**，这些进程就构成了**运行队列**。
+
+运行队列越长，处于等待状态的进程就越多。
+
+**性能工具**通常会给出**可运行的进程个数**和**等待I/O的阻塞进程个数**。另一种常见的系统统计是**平均负载**。**系统的负载**是指**正在运行**和**可运行的进程总数**。比如，如果正在运行的进程为两个，而可运行的进程为三个，那么**系统负载就是5**。**平均负载**是**给定时间**内的**负载量**。一般情况下，取平均负载的时间为1分钟、5分钟和15分钟。这能让你观察到负载是如何随时间变化的。
+
+# 上下文切换
+
 大部分现代处理器一次只能运行一个进程或线程。虽然有些处理器（比如超线程处理器）实际上可以同时运行多个进程，但是Linux会把它们看作多个单线程处理器。如果要制造出给定单处理器同时运行多个任务的假象，Linux内核就要不断地在不同的进程间切换。这种不同进程间的切换称为上下文切换，因为当其发生时，CPU要保存旧进程的所有上下文信息，并取出新进程的所有上下文信息。上下文中包含了Linux跟踪新进程的大量信息，其中包括：进程正在执行的指令，分配给进程的内存，进程打开的文件等。这些上下文切换涉及大量信息的移动，因此，上下文切换的开销可以是相当大的。尽量减少上下文切换的次数是个好主意。
-要避免上下文切换，重要的一点是了解它们是如何发生的。首先，上下文切换可以是内核调度的结果。为了保证公平地给每个进程分配处理器时间，内核周期性地中断正在运行的进程，在适当的情况下，内核调度器会决定开始另一个进程，而不是让当前进程继续执行。每次这种周期性中断或定时发生时，你的系统都可能进行上下文切换。每秒定时中断的次数与架构和内核版本有关。一个检查中断频率的简单方法是用/proc/interrupts文件，它可以确定已知时长内发生的中断次数。如清单2.1所示。
-清单2.1
+
+要避免上下文切换，重要的一点是了解它们是如何发生的。首先，上下文切换可以是内核调度的结果。为了保证公平地给每个进程分配处理器时间，内核周期性地中断正在运行的进程，在适当的情况下，内核调度器会决定开始另一个进程，而不是让当前进程继续执行。每次这种周期性中断或定时发生时，你的系统都可能进行上下文切换。每秒定时中断的次数与架构和内核版本有关。一个检查中断频率的简单方法是用/proc/interrupts文件，它可以确定已知时长内发生的中断次数。如图所示。
+
+![2019-12-07-23-15-28.png](./images/2019-12-07-23-15-28.png)
 ￼
 在清单2.1中，我们要求内核给出定时器启动的次数，等待10秒后，再次请求。这就是说，在这台机器上定时器启动频率为（24070093-24060043）中断/（10秒）或者约1000次中断/秒。如果你的上下文切换明显多于定时器中断，那么这些切换极有可能是由I/O请求或其他长时间运行的系统调用（如休眠）造成的。当应用请求的操作不能立即完成时，内核启动该操作，保存请求进程，并尝试切换到另一个已就绪进程。这能让处理器尽量保持忙状态。
 2.1.3 中断
