--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
@@ -36,9 +36,9 @@
 
 # 3. 上下文切换
 
-大部分现代处理器一次只能运行一个进程或线程。虽然有些处理器（比如超线程处理器）实际上可以同时运行多个进程，但是Linux会把它们看作多个单线程处理器。如果要制造出给定单处理器同时运行多个任务的假象，Linux内核就要不断地在不同的进程间切换。这种不同进程间的切换称为上下文切换，因为当其发生时，CPU要保存旧进程的所有上下文信息，并取出新进程的所有上下文信息。上下文中包含了Linux跟踪新进程的大量信息，其中包括：进程正在执行的指令，分配给进程的内存，进程打开的文件等。这些上下文切换涉及大量信息的移动，因此，上下文切换的开销可以是相当大的。尽量减少上下文切换的次数是个好主意。
+大部分现代处理器一次只能运行一个进程或线程。虽然有些处理器（比如**超线程处理器**）实际上可以**同时**运行**多个进程**，但是Linux会把它们看作**多个单线程处理器**。如果要制造出**给定单处理器同时运行多个任务**的假象，Linux内核就要不断地在不同的进程间切换。这种不同进程间的切换称为**上下文切换**，因为当其发生时，CPU要保存旧进程的所有上下文信息，并取出新进程的所有上下文信息。上下文中包含了Linux跟踪新进程的大量信息，其中包括：进程正在执行的指令，分配给进程的内存，进程打开的文件等。这些上下文切换涉及大量信息的移动，因此，上下文切换的开销可以是相当大的。尽量减少上下文切换的次数是个好主意。
 
-要避免上下文切换，重要的一点是了解它们是如何发生的。首先，上下文切换可以是内核调度的结果。为了保证公平地给每个进程分配处理器时间，内核周期性地中断正在运行的进程，在适当的情况下，内核调度器会决定开始另一个进程，而不是让当前进程继续执行。每次这种周期性中断或定时发生时，你的系统都可能进行上下文切换。每秒定时中断的次数与架构和内核版本有关。一个检查中断频率的简单方法是用/proc/interrupts文件，它可以确定已知时长内发生的中断次数。如图所示。
+要避免上下文切换，重要的一点是了解它们是**如何发生**的。首先，上下文切换可以是内核调度的结果。为了保证公平地给每个进程分配处理器时间，内核周期性地中断正在运行的进程，在适当的情况下，内核调度器会决定开始另一个进程，而不是让当前进程继续执行。每次这种周期性中断或定时发生时，你的系统都可能进行上下文切换。每秒定时中断的次数与架构和内核版本有关。一个检查中断频率的简单方法是用/proc/interrupts文件，它可以确定已知时长内发生的中断次数。如图所示。
 
 ![2019-12-07-23-15-28.png](./images/2019-12-07-23-15-28.png)
 ￼
