--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
@@ -36,17 +36,30 @@
 
 # 3. 上下文切换
 
-大部分现代处理器一次只能运行一个进程或线程。虽然有些处理器（比如**超线程处理器**）实际上可以**同时**运行**多个进程**，但是Linux会把它们看作**多个单线程处理器**。如果要制造出**给定单处理器同时运行多个任务**的假象，Linux内核就要不断地在不同的进程间切换。这种不同进程间的切换称为**上下文切换**，因为当其发生时，CPU要保存旧进程的所有上下文信息，并取出新进程的所有上下文信息。上下文中包含了Linux跟踪新进程的大量信息，其中包括：进程正在执行的指令，分配给进程的内存，进程打开的文件等。这些上下文切换涉及大量信息的移动，因此，上下文切换的开销可以是相当大的。尽量**减少上下文切换的次数**是个好主意。
+## 上下文切换的定义
 
-要避免上下文切换，重要的一点是了解它们是**如何发生**的。首先，上下文切换可以是**内核调度**的结果。为了保证公平地给每个进程分配处理器时间，内核**周期性**地中断正在运行的进程，在适当的情况下，内核调度器会决定开始另一个进程，而不是让当前进程继续执行。每次这种周期性中断或定时发生时，你的系统都可能进行上下文切换。每秒定时中断的次数与架构和内核版本有关。一个检查中断频率的简单方法是用/proc/interrupts文件，它可以确定已知时长内发生的中断次数。如图所示。
+大部分现代处理器一次只能运行一个进程或线程。虽然有些处理器（比如**超线程处理器**）实际上可以**同时**运行**多个进程**，但是Linux会把它们看作**多个单线程处理器**。如果要制造出**给定单处理器同时运行多个任务**的假象，Linux内核就要不断地在不同的进程间切换。这种不同进程间的切换称为**上下文切换**，因为当其发生时，CPU要保存旧进程的所有上下文信息，并取出新进程的所有上下文信息。
+
+上下文中包含了Linux跟踪新进程的大量信息，其中包括：进程正在执行的指令，分配给进程的内存，进程打开的文件等。这些上下文切换涉及大量信息的移动，因此，上下文切换的**开销**可以是**相当大**的。
+
+尽量**减少上下文切换的次数**是个好主意。
+
+## 上下文切换的发生
+
+要避免上下文切换，重要的一点是了解它们是**如何发生**的。
+
+首先，上下文切换可以是**内核调度**的结果。为了保证公平地给每个进程分配处理器时间，内核**周期性**地**中断**正在运行的进程，在适当的情况下，内核调度器会决定开始另一个进程，而不是让当前进程继续执行。每次这种周期性中断或定时发生时，你的系统都可能进行上下文切换。**每秒定时中断的次数**与**架构**和**内核版本**有关。一个检查**中断频率**的简单方法是用/**proc/interrupts文件**，它可以确定已知时长内发生的中断次数。如图所示。
 
 ![2019-12-07-23-15-28.png](./images/2019-12-07-23-15-28.png)
 ￼
-在清单2.1中，我们要求内核给出定时器启动的次数，等待10秒后，再次请求。这就是说，在这台机器上定时器启动频率为（24070093-24060043）中断/（10秒）或者约1000次中断/秒。如果你的上下文切换明显多于定时器中断，那么这些切换极有可能是由I/O请求或其他长时间运行的系统调用（如休眠）造成的。当应用请求的操作不能立即完成时，内核启动该操作，保存请求进程，并尝试切换到另一个已就绪进程。这能让处理器尽量保持忙状态。
+如图，我们要求内核给出定时器启动的次数，等待10秒后，再次请求。这就是说，在这台机器上定时器启动频率为（24070093-24060043）中断/（10秒）或者约1000次中断/秒。
+
+如果你的**上下文切换**明显**多于定时器中断**，那么这些切换极有可能是由**I/O请求**或其他**长时间运行的系统调用（如休眠**）造成的。当应用请求的**操作不能立即完成**时，内核启动该操作，保存请求进程，并**尝试切换**到另一个已就绪进程。这能让处理器尽量保持忙状态。
 
 # 中断
 
 此外，处理器还周期性地从硬件设备接收中断。当设备有事件需要内核处理时，它通常就会触发这些中断。比如，如果磁盘控制器刚刚完成从驱动器取数据块的操作，并准备好提供给内核，那么磁盘控制器就会触发一个中断。对内核收到的每个中断，如果已经有相应的已注册的中断处理程序，就运行该程序，否则将忽略这个中断。这些中断处理程序在系统中具有很高的运行优先级，并且通常执行速度也很快。有时，中断处理程序有工作要做，但是又不需要高优先级，因此它可以启动“下半部”（bottom half），也就是所谓的软中断处理程序。如果有很多中断，内核会花大量的时间服务这些中断。查看/proc/interrupts文件可以显示出哪些CPU上触发了哪些中断。
+
 2.1.4 CPU使用率
 CPU使用率是个简单的概念。在任何给定的时间，CPU可以执行以下七件事情中的一个：
 （1）CPU可以是空闲的，这意味着处理器实际上没有做任何工作，并且等待有任务可以执行。
