--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
@@ -56,7 +56,7 @@
 ￼
 如图，我们要求内核给出**定时器启动的次数**，等待10秒后，再次请求。这就是说，在这台机器上定时器启动频率为（24070093-24060043）中断/（10秒）或者约1000次中断/秒。
 
-如果你的**上下文切换**明显**多于定时器中断！！！**，那么这些切换极有可能是由**I/O请求**或其他**长时间运行的系统调用（如休眠**）造成的。当应用请求的**操作不能立即完成**时，内核启动该操作，保存请求进程，并**尝试切换**到另一个已就绪进程。这能让处理器尽量保持忙状态。
+如果你的**上下文切换**明显**多于定时器中断！！！**，那么这些切换极有可能是由**I/O请求**或其他**长时间运行的系统调用（如休眠**）造成的。当应用请求的**操作不能立即完成**时，内核启动该操作，保存请求进程，并**尝试切换**到另一个已就绪进程。这能**让处理器尽量保持忙状态**。
 
 # 中断
 
@@ -68,13 +68,26 @@
 
 # CPU使用率
 
-CPU使用率是个简单的概念。在任何给定的时间，CPU可以执行以下七件事情中的一个：
-（1）CPU可以是空闲的，这意味着处理器实际上没有做任何工作，并且等待有任务可以执行。
-（2）CPU可以运行用户代码，即指定的“用户”时间。
-（3）CPU可以执行Linux内核中的应用程序代码，这就是“系统”时间。
-（4）CPU可以执行“比较友好”的或者优先级被设置为低于一般进程的用户代码。
-（5）CPU可以处于iowait状态，即系统正在等待I/O（如磁盘或网络）完成。
-（6）CPU可以处于irq状态，即它正在用高优先级代码处理硬件中断。
-（7）CPU可以处于softirq模式，即系统正在执行同样由中断触发的内核代码，只不过其运行于较低优先级（下半部代码）。
-此情景出现的条件为：发生设备中断时，而内核在将其移交给用户空间之前必须对其进行一些处理（比如，处理网络包）。
-大多数性能工具将这些数值表示为占CPU总时间的百分比。这些时间的范围从0%到100%，但全部三项加起来等于100%。一个具有高“系统”百分比的系统表明其大部分时间都消耗在了内核上。像oprofile一样的工具可以帮助确定时间都消耗在了哪
+CPU使用率是个简单的概念。
+
+在任何给定的时间，CPU可以执行以下七件事情中的一个：
+
+（1）CPU可以是**空闲**的，这意味着处理器实际上没有做任何工作，并且等待有任务可以执行。
+
+（2）CPU可以运行**用户代码**，即指定的“**用户”时间**。
+
+（3）CPU可以执行Linux**内核**中的应用程序代码，这就是“**系统”时间**。
+
+（4）CPU可以执行“比较友好”的或者**优先级**被设置为**低于一般进程**的**用户代码**。
+
+（5）CPU可以处于**iowait**状态，即系统正在**等待I/O（如磁盘或网络）完成**。
+
+（6）CPU可以处于**irq状态**，即它正在用**高优先级**代码处理**硬件中断**。
+
+（7）CPU可以处于**softirq模式**，即系统正在执行同样由**中断触发**的**内核代码**，只不过其运行于**较低优先级**（**下半部代码**）。
+
+此情景出现的条件为：发生**设备中断**时，而**内核**在将其**移交给用户空间之前**必须对其进行一些处理（比如，**处理网络包**）。
+
+大多数性能工具将这些数值表示为占CPU总时间的百分比。这些时间的范围从0%到100%，但全部三项加起来等于100%。一个具有高“系统”百分比的系统表明其大部分时间都消耗在了内核上。像oprofile一样的工具可以帮助确定时间都消耗在了哪里。具有高“用户”时间的系统则将其大部分时间都用来运行应用程序。下一章展示在上述情况下，如何用性能工具追踪问题。如果系统在应该工作的时候花费了大量的时间处于iowait状态，那它很可能在等待来自设备的I/O。导致速度变慢的原因可能是磁盘、网卡或其他设备。
+
+
