--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/1. CPU性能统计信息.md
@@ -1,4 +1,22 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 不同工具不同方式相似结果](#1-不同工具不同方式相似结果)
+- [2. 运行队列统计](#2-运行队列统计)
+  - [2.1. 可运行/阻塞进程和运行队列](#21-可运行阻塞进程和运行队列)
+  - [2.2. 性能工具: 可运行/阻塞进程个数和平均负载](#22-性能工具-可运行阻塞进程个数和平均负载)
+- [3. 上下文切换](#3-上下文切换)
+  - [3.1. 上下文切换的定义](#31-上下文切换的定义)
+  - [3.2. 上下文切换的发生](#32-上下文切换的发生)
+- [4. 中断](#4-中断)
+- [5. CPU使用率](#5-cpu使用率)
+  - [5.1. CPU的运行状态](#51-cpu的运行状态)
+  - [5.2. CPU时间百分比](#52-cpu时间百分比)
+
+<!-- /code_chunk_output -->
+
 # 1. 不同工具不同方式相似结果
 
 **每一种系统级Linux性能工具**都提供了**不同的方式**来提取**相似的统计结果**。
@@ -36,7 +54,7 @@
 
 # 3. 上下文切换
 
-## 上下文切换的定义
+## 3.1. 上下文切换的定义
 
 大部分现代处理器一次只能运行一个进程或线程。虽然有些处理器（比如**超线程处理器**）实际上可以**同时**运行**多个进程**，但是Linux会把它们看作**多个单线程处理器**。如果要制造出**给定单处理器同时运行多个任务**的假象，Linux内核就要不断地在不同的进程间切换。这种不同进程间的切换称为**上下文切换**，因为当其发生时，CPU要保存旧进程的所有上下文信息，并取出新进程的所有上下文信息。
 
@@ -44,7 +62,7 @@
 
 尽量**减少上下文切换的次数**是个好主意。
 
-## 上下文切换的发生
+## 3.2. 上下文切换的发生
 
 要避免上下文切换，重要的一点是了解它们是**如何发生**的。
 
@@ -58,7 +76,7 @@
 
 如果你的**上下文切换**明显**多于定时器中断！！！**，那么这些切换极有可能是由**I/O请求**或其他**长时间运行的系统调用（如休眠**）造成的。当应用请求的**操作不能立即完成**时，内核启动该操作，保存请求进程，并**尝试切换**到另一个已就绪进程。这能**让处理器尽量保持忙状态**。
 
-# 中断
+# 4. 中断
 
 此外，处理器还**周期性**地**从硬件设备接收中断**。当设备有事件需要内核处理时，它通常就会触发这些中断。
 
@@ -66,11 +84,13 @@
 
 查看/**proc/interrupts**文件可以显示出**哪些CPU**上触发了**哪些中断**。
 
-# CPU使用率
+# 5. CPU使用率
 
 CPU使用率是个简单的概念。
 
-在任何给定的时间，CPU可以执行以下七件事情中的一个：
+## 5.1. CPU的运行状态
+
+在**任何给定的时间**，CPU可以执行以下七件事情中的一个：
 
 （1）CPU可以是**空闲**的，这意味着处理器实际上没有做任何工作，并且等待有任务可以执行。
 
@@ -88,6 +108,14 @@ CPU使用率是个简单的概念。
 
 此情景出现的条件为：发生**设备中断**时，而**内核**在将其**移交给用户空间之前**必须对其进行一些处理（比如，**处理网络包**）。
 
-大多数性能工具将这些数值表示为占CPU总时间的百分比。这些时间的范围从0%到100%，但全部三项加起来等于100%。一个具有高“系统”百分比的系统表明其大部分时间都消耗在了内核上。像oprofile一样的工具可以帮助确定时间都消耗在了哪里。具有高“用户”时间的系统则将其大部分时间都用来运行应用程序。下一章展示在上述情况下，如何用性能工具追踪问题。如果系统在应该工作的时候花费了大量的时间处于iowait状态，那它很可能在等待来自设备的I/O。导致速度变慢的原因可能是磁盘、网卡或其他设备。
+## 5.2. CPU时间百分比
 
+大多数性能工具将这些数值表示为占CPU总时间的百分比。这些时间的范围从0%到100%，但全部三项加起来等于100%。
 
+一个具有**高“系统”百分比**的系统表明其大部分时间都消耗在了**内核**上。
+
+像**oprofile**一样的工具可以帮助确定时间都消耗在了哪里。
+
+具有**高“用户”时间**的系统则将其大部分时间都用来运行**应用程序**。
+
+如果系统在应该工作的时候花费了大量的时间处于**iowait状态**，那它很**可能**在等待来自**设备的I/O**。导致**速度变慢**的**原因**可能是**磁盘**、**网卡**或**其他设备**。
