--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/2. Linux性能工具: CPU.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/2. Linux性能工具: CPU.md
@@ -2,12 +2,16 @@
 # vmstat（虚拟内存统计）
 
 vmstat是指虚拟内存统计，这个名称表明它能告诉你系统的虚拟内存性能信息。幸运的是，它实际上能完成的工作远不止于此。vmstat是一个很有用的命令，它能获取整个系统性能的粗略信息，包括：
-❑正在运行的进程个数。
-❑CPU的使用情况。
-❑CPU接收的中断个数。
-❑调度器执行的上下文切换次数。
+
+正在运行的进程个数。
+CPU的使用情况。
+CPU接收的中断个数。
+调度器执行的上下文切换次数。
+
 它是用于获取系统性能大致信息的极好工具。
+
 2.2.1.1 CPU性能相关的选项
+
 vmstat可以被如下命令行调用：
 ￼
 vmstat运行于两种模式：采样模式和平均模式。如果不指定参数，则vmstat统计运行于平均模式下，vmstat显示从系统启动以来所有统计数据的均值。但是，如果指定了延迟，那么第一个采样仍然是系统启动以来的均值，但之后vmstat按延迟秒数采样系统并显示统计数据。表2-1解释了vmstat的选项。
