--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/2. Linux性能工具: CPU.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/2. Linux性能工具: CPU.md
@@ -1,12 +1,16 @@
 
 # vmstat（虚拟内存统计）
 
-vmstat是指虚拟内存统计，这个名称表明它能告诉你系统的虚拟内存性能信息。幸运的是，它实际上能完成的工作远不止于此。vmstat是一个很有用的命令，它能获取整个系统性能的粗略信息，包括：
+vmstat是指**虚拟内存统计**，这个名称表明它能告诉你系统的**虚拟内存性能信息**。
 
-正在运行的进程个数。
-CPU的使用情况。
-CPU接收的中断个数。
-调度器执行的上下文切换次数。
+实际上远不止于此。
+
+vmstat是一个很有用的命令，它能获取整个系统性能的粗略信息，包括：
+
+* **正在运行**的**进程个数**。
+* **CPU**的**使用情况**。
+* CPU接收的中断个数。
+* 调度器执行的上下文切换次数。
 
 它是用于获取系统性能大致信息的极好工具。
 
