--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/2. Linux性能工具: CPU.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/2. Linux性能工具: CPU.md
@@ -77,70 +77,134 @@ top是Linux系统监控工具中的瑞士军刀。它善于将相当多的系统
 top用如下命令行调用：
 ￼
 top实际上有两种模式的选项：命令行选项和运行时选项。命令行选项决定top如何显示其信息。表2-3给出的命令行选项会影响top显示的性能统计信息的类型和频率。
-表2-3 top命令行选项
+
+表2-3 top命令行选项:
+
+![2019-12-08-14-17-48.png](./images/2019-12-08-14-17-48.png)
 ￼
 在你运行top时，为了调查特定问题，你可能想要对你的观察略作调整。top输出的可定制性很高。表2-4给出的选项可以在top运行期间修改显示的统计信息：
-表2-4 top运行时统计信息显示选项
+
+表2-4 top运行时统计信息显示选项:
+
+![2019-12-08-14-17-57.png](./images/2019-12-08-14-17-57.png)
 ￼
 表2-5给出的选项打开或关闭各种系统级信息的显示。关闭不需要的统计信息有助于在屏幕上显示更多进程。
-表2-5 top运行时输出切换选项
+
+表2-5 top运行时输出切换选项:
+
+![2019-12-08-14-18-08.png](./images/2019-12-08-14-18-08.png)
 ￼
 表2-6对top支持的不同排序模式进行了说明。按内存消耗量排序尤其有用，它能找出哪个进程消耗了最多的内存。
-表2-6 top输出排序/显示选项
+
+表2-6 top输出排序/显示选项:
+
+![2019-12-08-14-19-38.png](./images/2019-12-08-14-19-38.png)
 ￼
 top除了提供特定进程的信息之外，还提供系统整体信息。表2-7给出了这些统计信息。
-表2-7 top性能统计信息
+
+表2-7 top性能统计信息:
+
+![2019-12-08-14-19-54.png](./images/2019-12-08-14-19-54.png)
 ￼
 top提供了不同的正在运行进程的大量信息，是找出资源消耗大户的极好方法。
-2.2.2.2 用法示例
+
+## 用法示例
+
 清单2.6是运行top的一个例子。当它启动后，将会周期性地更新屏幕直到退出。该例展示了top能生成的一些系统整体统计信息。首先。我们能看到1分钟、5分钟和15分钟的系统平均负载。可以看出，系统已经开始忙碌起来（因为doom-3.x86）。一个CPU在用户代码上花费了90%的时间。另一个则只在用户代码上花费了约13%的时间。最后，我们看到73个进程处于睡眠状态，只有3个进程正在运行。
-清单2.6￼
-现在，在top运行时按下F键弹出配置界面，如清单2.7所示。当你按下代表键（A代表PID, B代表PPID，等等）时，top将切换这些统计信息在屏幕上的显示。选择好需要的全部统计信息后，按下Enter键返回top的初始界面，现在它显示的是选出的统计信息的当前值。在配置统计信息时，所有当前选择的字段将会以大写形式显示在Current Field Order行，并在其名称旁出现一个星号（*）。
-清单2.7
+
+清单2.6￼:
+
+![2019-12-08-14-20-38.png](./images/2019-12-08-14-20-38.png)
+
+现在，在top运行时按下F键弹出配置界面，如清单2.7所示。当你按下代表键（A代表PID, B代表PPID，等等）时，top将切换这些统计信息在屏幕上的显示。选择好需要的全部统计信息后，按下Enter键返回top的初始界面，现在它显示的是选出的统计信息的当前值。在配置统计信息时，所有当前选择的字段将会以大写形式显示在Current Field Order行，并在其名称旁出现一个星号（\*）。
+
+清单2.7:
+
+![2019-12-08-14-21-27.png](./images/2019-12-08-14-21-27.png)
 ￼
 为了展示top的可定制性，清单2.8给出了一个高度配置的输出界面，其中只显示了与CPU使用率相关的top选项：
-清单2.8
+
+清单2.8:
+
+![2019-12-08-14-22-14.png](./images/2019-12-08-14-22-14.png)
 ￼
 top提供了一个系统资源使用率的总览，其重点信息在于各种进程是如何消耗这些资源的。由于其输出格式对用户是友好的，而对工具是不友好的，因此最好是在与系统直接交互时使用。
-2.2.3 top（3.x.x版本）
+
+# top（3.x.x版本）
+
 近来，最新版本中提供的top已经有了彻底的改变，其结果就是很多命令行和交互选项发生了变化。虽然基本思路是相似的，但对top进行了精简，并添加了几个不同的显示模式。
 同样的，top呈现为一个降序列表，排在最前面的是最占用CPU的进程。
-2.2.3.1 CPU性能相关的选项
+
+## CPU性能相关的选项
+
 用如下命令行调用top：
 ￼
 top实际有两种模式的选项：命令行选项和运行时选项。命令行选项决定top如何显示其信息。表2-8给出的命令行选项会影响top显示的性能统计信息的类型和频率。
-表2-8 top命令行选项
+
+表2-8 top命令行选项:
+
+![2019-12-08-14-23-36.png](./images/2019-12-08-14-23-36.png)
 ￼
 运行top时，为了调查特定问题，你可能想要对你的观察略作调整。和top 2.x版本一样，其输出的可定制性很高。表2-9给出的选项可以在top运行期间修改显示的统计信息。
-表2-9 top运行时选项
+
+表2-9 top运行时选项:
+
+![2019-12-08-14-24-37.png](./images/2019-12-08-14-24-37.png)
 ￼
 表2-10给出的选项打开或关闭各种系统级信息的显示。关闭不需要的统计信息有助于在屏幕上显示更多进程。
-表2-10 top运行时输出切换选项
+
+表2-10 top运行时输出切换选项:
+
+![2019-12-08-14-24-58.png](./images/2019-12-08-14-24-58.png)
 ￼
-与top v2.x相同，top v3.x除了提供特定进程的信息之外，还提供系统整体信息。表2-11给出了这些统计信息。表2-11 top性能统计信息
+与top v2.x相同，top v3.x除了提供特定进程的信息之外，还提供系统整体信息。表2-11给出了这些统计信息。
+
+表2-11 top性能统计信息:
+
+![2019-12-08-14-25-19.png](./images/2019-12-08-14-25-19.png)
 ￼
 top提供了不同的正在运行进程的大量信息，是找出资源消耗大户的极好方法。top v.3版对top进行了精简，并增加了一些对相同数据的不同视图。
-2.2.3.2 用法示例
+
+## 用法示例
+
 清单2.9是运行top v3.0的一个例子。同样的，它会周期性地更新屏幕直到退出。其统计信息与top v2.x相同，但名称略有改变。
-清单2.9
+
+清单2.9:
 ￼
-￼
+￼![2019-12-08-14-25-46.png](./images/2019-12-08-14-25-46.png)
+
 现在，在top运行时按下f键调出配置界面，如清单2.10所示。当你按下代表键（A代表PID, B代表PPID等）时，top将切换这些统计信息在屏幕上的显示。选择好需要的全部统计信息后，按下Enter键返回top的初始界面，现在它显示的是被选出的统计信息的当前值。在配置统计信息时，所有当前被选择的字段将会以大写形式显示在Current Field Order行，并在其名称旁出现一个星号（*）。请注意，大多数统计信息都是相同的，但名称略有变化。
-清单2.10
+
+清单2.10:
+
+![2019-12-08-14-26-06.png](./images/2019-12-08-14-26-06.png)
 ￼
 清单2.11展示了新的top输出模式，许多不同的统计信息进行了分类并显示在同一屏幕上。
-清单2.11
+
+清单2.11:
+
+![2019-12-08-14-26-22.png](./images/2019-12-08-14-26-22.png)
 ￼
 top v3.x为top提供了稍简洁的界面。它简化了top的某些方面，并提供了一个很好的“总结”信息屏，显示了系统中的许多资源消费者。
-2.2.4 procinfo（从/proc文件系统显示信息）
+
+# procinfo（从/proc文件系统显示信息）
+
 就像vmstat一样，procinfo也为系统整体信息特性提供总览。尽管它提供的有些信息与vmstat相同，但它还会给出CPU从每个设备接收的中断数量。其输出格式的易读性比vmstat稍微强一点，但却会占用更多的屏幕空间。
-2.2.4.1 CPU性能相关的选项
+
+## CPU性能相关的选项
+
 procinfo的调用命令行如下：
 ￼
 表2-12描述了不同的选项，用于修改procinfo显示样本的输出和频率。
-表2-12 procinfo命令行选项
+
+表2-12 procinfo命令行选项:
+
+![2019-12-08-14-27-18.png](./images/2019-12-08-14-27-18.png)
 ￼
 表2-13给出了procinfo收集的CPU统计信息。
-表2-13 procinfo CPU 统计信息
+
+表2-13 procinfo CPU 统计信息:
+
+![2019-12-08-14-27-27.png](./images/2019-12-08-14-27-27.png)
 ￼
 与vmstat以及top一样，procinfo是一个低开销的命令，适合于让其自行在控制台或屏幕窗口运行。它能够很好地反映系统的健康和性能。
