--- Auto-Git Commit ---

--- a/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/2. Linux性能工具: CPU.md
+++ b/Linux/Learning/Linux性能优化/第2章 性能工具: 系统CPU/2. Linux性能工具: CPU.md
@@ -375,10 +375,103 @@ sar -O /tmp/apache_test 1 3
 除了将信息记录到文件之外，sar还可以用于实时系统观察。在清单2.19所示的例子中，CPU状态被采样了三次，采样间隔时间为一秒。
 
 清单2.19
+
+![2019-12-08-14-58-06.png](./images/2019-12-08-14-58-06.png)
 ￼
 默认显示的目的是展示CPU的信息，但是也可以显示其他信息。比如，sar可以显示每秒的上下文切换次数，以及交换的内存页面数。在清单2.20中，sar采样了两次信息，间隔时间为一秒。这次，我们要求sar显示每秒上下文切换的数量以及创建的进程数。我们还要求sar给出平均负载的信息。可以看出来，本例中的机器有163个进程在内存中，但都没有运行。过去的一分钟平均有1.12个进程等待运行。
+
 清单2.20
+
+![2019-12-08-14-58-16.png](./images/2019-12-08-14-58-16.png)
 ￼
 如你所见，sar是一个强大的工具，能够记录多种不同的性能统计信息。它提供了Linux友好界面，使你可以轻松地提取和分析性能数据。
-2.2.8 oprofile
-oprofile是性能工具包，它利用几乎所有现代处理器都有的性能计数器来跟踪系统整体以及单个进程中CPU时间的消耗情况。除了测量CPU周期消耗
+
+# oprofile
+
+oprofile是性能工具包，它利用几乎所有现代处理器都有的性能计数器来跟踪系统整体以及单个进程中CPU时间的消耗情况。除了测量CPU周期消耗在哪里之外，oprofile还可以测量关于CPU执行的非常底层的信息。根据由底层处理器支持的事件，它可以测量的内容包括：cache缺失、分支预测错误和内存引用，以及浮点操作。
+
+oprofile不会记录发生的每个事件，相反，它与处理器性能硬件一起工作，每count个事件采样一次，这里的count是一个数值，由用户在启动oprofile时指定。count的值越低，结果的准确度越高，而oprofile的开销越大。若count保持在一个合理的数值，那么，oprofile不仅运行开销非常低，并且还能以令人惊讶的准确性描述系统性能。
+
+采样是非常强大的，但使用时要小心一些不明显的陷阱。首先，采样可能会显示你有90%的时间花在了一个特定的例程上，但它不会显示原因。一个特定例程消耗了大量周期有两种可能的原因。其一，该例程可能是瓶颈，其执行需要很多时间。但是，也可能例程的执行时间是合理的，而其被调用的次数非常高。通常有两种途径可以发现究竟是哪一种情况：通过查看采样找出特别热门的行，或是通过编写代码来计算例程被调用次数。
+
+采样的第二个问题是你永远无法十分确定一个函数是从哪里被调用的。即使你已经搞明白它被调用了很多次，并且已经跟踪到了所有调用它的函数，但也不一定清楚其中哪个函数完成了绝大多数的调用。
+
+## CPU性能相关的选项
+
+oprofile实际上是一组协同工作的组件，用于收集CPU性能统计信息。oprofile主要有三个部分：
+
+* oprofile核心模块控制处理器并允许和禁止采样。
+* oprofile后台模块收集采样，并将它们保存到磁盘。
+* oprofile报告工具获取收集的采样，并向用户展示它们与在系统上运行的应用程序的关系。
+
+oprofile工具包将驱动器和后台操作隐藏在opcontrol命令中。opcontrol命令用于选择处理器采样的事件并启动采样。
+
+进行后台控制时，你可以使用如下命令行调用opcontrol：
+
+```
+opcontrol [--start] [--stop] [--dump]
+```
+￼
+此选项的控制（性能分析后台进程）使你能开始和停止采样，并将样本从守护进程的内存导入磁盘。采样时，oprofile后台模块将大量的采样保存在内部缓冲区。但是，它只能分析那些已经写入（或导入）磁盘的样本。写磁盘的开销可能会很大，因此，oprofile只会定期执行这个操作。其结果就是，运行测试并用oprofile分析后，可能不会马上得到结果，你需要等待，直到后台将缓冲区写入磁盘。当你想要立即开始分析时，这点是很让人挠头的，因此，opcontrol命令能让你禁止将采样从oprofile后台的内部缓冲区导入到磁盘。这将使你能在测试结束后，立刻开始性能调查。
+
+表2-18介绍了opcontrol程序的选项，它们使你能控制后台操作。
+
+表2-18 opcontrol后台控制:
+
+![2019-12-08-15-04-00.png](./images/2019-12-08-15-04-00.png)
+￼
+默认情况下，oprofile按给定频率选择一个事件，这个频率对于你在运行的处理器和内核来说是合理的。但是，比起默认事件来，还有更多的事件可以监控。当你列出并选择了一个事件后，opcontrol将用如下命令行调用：
+
+```
+opcontrol [--list-events] [-event=:name:count:unitmask:kernel:user:]
+```
+￼
+事件说明使你可以选择采样哪个事件，该事件的采样频率，以及采样发生在内核空间、用户空间或同时在这两个空间。表2-19介绍了opcontrol的命令行选项，它们使你能选择不同的事件进行采样。
+
+表2-19 opcontrol事件处理:
+
+![2019-12-08-15-05-44.png](./images/2019-12-08-15-05-44.png)
+￼
+收集并保存样本后，oprofile提供另一种不同的工具opreport，该工具使你能查看已收集的样本。
+
+opreport的调用命令行如下：
+
+```
+opcontrol [-r] [-t]
+```
+￼
+通常，opreport显示所有系统收集到的样本，以及哪些可执行程序引起的这些样本（包括内核）。样本数最多的可执行线程排在第一位，其后为所有有样本的可执行线程。在一个典型系统中，排在列表前面的是拥有大多数样本的少数可执行线程，而大量的可执行线程只贡献了数量很少的样本。针对这种情况，opreport允许你设置阈值，只有样本数量百分比达到或超过阈值的可执行线程才能显示。同时，opreport还可以将可执行线程的显示顺序倒过来，那些拥有最多样本数的将最后显示。这种方式下，最重要的数据显示在最后，那么它就不会滚过屏幕。
+表2-20说明了opreport的命令行选项，它们使你能定制采样输出的格式。
+表2-20 opreport报告格式
+￼
+再次说明，oprofile是一个复杂的工具，给出的这些选项仅仅是oprofile的基础功能。在后续章节中，你将学习到oprofile更多的功能。
+2.2.8.2 用法示例
+oprofile是非常强大的工具，但它的安装有点困难。附录B指导读者如何在几个主要的Linux发行版上安装和运行oprofile。
+
+使用oprofile首先要按照分析对其进行设置。第一条命令如清单2.21所示，用opcontrol命令告诉oprofile工具包一个非压缩的内核映像在什么位置。oprofile需要知道这个文件的位置，以便它将样本分配给内核中的确切函数。
+清单2.21
+￼
+设置了当前内核的路径后，我们可以开始分析。清单2.22中的命令告诉oprofile用默认事件开始采样。这个事件根据处理器而变化，对当前处理器而言，这个事件是CPU_CLK_UNHALTED。只要处理器没有停止，该事件将会采样全部CPU周期。233869是指每233869个事件会采样处理器正在执行的指令。
+清单2.22
+￼
+现在已经开始采样后，我们想要分析采样结果。在清单2.23中，我们用报告工具来找出系统中发生了什么。opreport报告了目前为止分析的内容。
+清单2.23
+￼
+尽管分析已经进行了一小段时间，但当opreport表明它无法找到样本时，我们就会停止。发生这种情况的原因是：opreport命令在磁盘上查找样本，而oprofile后台程序则在内存中存储样本并定期将其转存到磁盘。当我们向opreport请求样本清单时，它无法在磁盘上找到，因此就会报告没有发现任何样本。为了缓解这一问题，我们可以通过在opcontrol中增加dump选项来强制后台程序立刻转存样本，如清单2.24所示，这条命令使我们能查看已收集的样本。
+清单2.24
+￼
+将样本转存到磁盘后，我们再次尝试要求oprofile给出报告，如清单2.25所示。这一次，我们得到了结果。报告中包含了收集样本来源处理器的信息，以及其监控事件的类型信息。然后，报告按降序排列事件发生的数量，并列出它们发生在哪个可执行文件中。我们可以看到，Linux内核占据了全部时钟的50%, emacs为14%, libc为12%。可以深入挖掘可执行文件确定哪个函数占据了所有的时间，我们将在第4章讨论这个问题。
+清单2.25
+￼
+当我们启动oprofile时，我们只使用了opcontrol为我们选择的默认事件。每个处理器都有一个非常丰富的可以被监控的事件集。在清单2.26中，我们要求opcontrol列出特定CPU可以获得的全部事件。这个清单相当长，但在其中我们可以看到除了CPU_CLK_UNHALTED之外，还可以监控DATA_MEM_REFS和DCU_LINES_IN。这些是内存子系统导致的存储事件，我们将在后续章节中讨论它们。
+清单2.26
+￼
+需要指明被监控事件的命令看上去有点麻烦，幸运的是，我们还可以利用oprofile的图形化命令oprof_start以图形方式启动和停止采样。这使得我们能以图形方式选择想要的事件，而没有必要搞清楚用准确的方式在命令行中明确说明想要监控的事件。
+在图2-3所示的op_control例子中，我们告诉oprofile想要同时监控DATA_MEM_REFS和L2_LD事件。DATA_MEM_REFS事件可以告诉我们哪些应用程序使用了大量的内存子系统，哪些使用了L2 cache。具体到这个处理器，其硬件只有两个计数器可用于采样，因此能同时使用的也只有两个事件。
+用oprofile的图形界面收集样本后，我们现在可以分析这些数据了。如清单2.27所示，我们要求opreport显示对其收集样本的分析，所用形式与监控周期时的类似。在本例中，我们可以发现libmad库占用了整个系统中数据内存访问的31%，成为内存子系统使用量最大的用户。
+￼
+图2-3
+清单2.27
+
+￼
+opreport提供的输出展示了包含任何被采样事件的所有系统库和可执行程序。请注意并非所有的事件都被记录下来，这是因为我们是在采样，实际上只会记录事件的子集。通常这不是问题，因为如果一个特定的库或可执行程序是性能问题，那么它很可能会导致高成本事件发生许多次。如果采样是随机的，这些高成本使事件最终也会被采样代码所捕获。
